fix image stretching

--- a/src/components/Table/index.css
+++ b/src/components/Table/index.css
@@ -5,12 +5,6 @@
     margin-right: 6px;    
 
 }
-img {
-    height: 40px;
-    width: 80px;
-    float: left;
-    margin-right: 40px;
-}
 
 .slate-table {
     border-style:hidden;
